--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="base:app_id" content="6942e241d19763ca26ddc3a7" />
     <title>Based Matching Game</title>
     <!-- Favicon / App Icons -->
     <link rel="icon" href="images/base01.jpg" sizes="any" />
