--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         height: 100%;
         z-index: 9999;
         overflow: visible;
-        pointer-events: auto; /* enable clicks */
+        pointer-events: auto;
       }
       .start-frame {
         display: block;
@@ -255,7 +255,7 @@
       .start-wrapper #btn-start {
         position: absolute;
         left: 50% !important;
-        bottom: 260px !important;
+        bottom: 10% !important;
         transform: translateX(-50%) !important;
         z-index: 10000 !important;
         margin: 0 !important;
