--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
+        min-height: 100vh;
         overflow: hidden;
         background: #0a1022; /* unified blue background */
         font-family:
@@ -46,6 +47,7 @@
         justify-content: center;
         width: 100%;
         height: 100%;
+        min-height: 100vh;
       }
       /* Mobile-first portrait board container (2:3 aspect via inner grid) */
       .board-wrap {
@@ -226,10 +228,11 @@
         left: 0;
         right: 0;
         bottom: 0;
-        display: grid;
-        place-items: center;
+        display: block;
         width: 100%;
         height: 100%;
+        min-width: 100%;
+        min-height: 100vh;
         z-index: 9999;
         overflow: visible;
         pointer-events: auto;
@@ -243,19 +246,19 @@
         bottom: 0;
         width: 100%;
         height: 100%;
+        min-width: 100%;
+        min-height: 100vh;
         background-image: url("images/base_top.JPG");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        border-radius: 12px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
         z-index: 0;
         pointer-events: none;
       }
       .start-wrapper #btn-start {
         position: absolute;
         left: 50% !important;
-        bottom: 10% !important;
+        bottom: 5% !important;
         transform: translateX(-50%) !important;
         z-index: 10000 !important;
         margin: 0 !important;
@@ -1198,6 +1201,8 @@
           startWrapper.style.bottom = "0";
           startWrapper.style.width = "100%";
           startWrapper.style.height = "100%";
+          startWrapper.style.minWidth = "100%";
+          startWrapper.style.minHeight = "100vh";
         }
         if (startBtn) {
           startBtn.disabled = false;
@@ -1214,6 +1219,15 @@
         const startFrame = $("#start-frame");
         if (startFrame) {
           startFrame.style.display = "block";
+          startFrame.style.position = "absolute";
+          startFrame.style.top = "0";
+          startFrame.style.left = "0";
+          startFrame.style.right = "0";
+          startFrame.style.bottom = "0";
+          startFrame.style.width = "100%";
+          startFrame.style.height = "100%";
+          startFrame.style.minWidth = "100%";
+          startFrame.style.minHeight = "100vh";
           startFrame.style.pointerEvents = "none";
           startFrame.style.zIndex = "0";
         }
